--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-discord.py~=1.6.0
 Pillow~=8.0.1
 aiohttp[speedups]~=3.6.3
 aiofiles~=0.6.0
 humanize~=3.2.0
 coloredlogs~=15.0
-PyQt5~=5.15.2
 python-magic~=0.4.13
-python-magic-win64~=0.4.13
+selenium~=3.141.0
