--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ aiofiles~=0.6.0
 humanize~=3.2.0
 coloredlogs~=15.0
 python-magic~=0.4.13
+python-magic-win64~=0.4.13
 selenium~=3.141.0
-numpy~=1.19.5
