--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ python-magic-win64 = "~=0.4.13"
 selenium = "~=3.141.0"
 "discord.py" = "~=1.6.0"
 Pillow = "~=8.0.1"
+youtube-dl = "*"
 
 [dev-packages]
 
