--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ selenium = "~=3.141.0"
 Pillow = "~=8.0.1"
 youtube-dl = "*"
 dblpy = "*"
-lottie = "*"
+lottie = {extras = ["gif"], version = "*"}
 
 [dev-packages]
 
