--- a/Pipfile
+++ b/Pipfile
@@ -11,10 +11,11 @@ coloredlogs = "~=15.0"
 python-magic-win64 = "~=0.4.13"
 selenium = "~=3.141.0"
 "discord.py" = "~=1.6.0"
-Pillow = "~=8.0.1"
+Pillow = "~=8.2.0"
 youtube-dl = "*"
 dblpy = "*"
 lottie = {extras = ["gif"], version = "*"}
+numpy = "*"
 
 [dev-packages]
 
