slashscript is a personal project of mine, a custom writing system for english. i would have revived my old bot that i wrote for it but mediaforge's chrome rendering is absolutely perfect for it.

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ numpy = "*"
 emoji = "*"
 regex = "*"
 isort = {extras = ["pipfile_deprecated_finder", "requirements_deprecated_finder"], version = "*"}
+pronouncing = "*"
 
 [dev-packages]
 
