--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ emoji = "*"
 regex = "*"
 isort = {extras = ["pipfile_deprecated_finder", "requirements_deprecated_finder"], version = "*"}
 pronouncing = "*"
+"discordlists.py" = "*"
 
 [dev-packages]
 
