update discord.py to avoid Rapptz/discord.py#7109

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ humanize = "~=3.2.0"
 coloredlogs = "~=15.0"
 python-magic-win64 = "~=0.4.13"
 selenium = "~=3.141.0"
-"discord.py" = "~=1.6.0"
+"discord.py" = ">=1.7.3"
 Pillow = "~=8.2.0"
 youtube-dl = "*"
 dblpy = "*"
