--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Pillow~=8.0.1
+Pillow~=8.2.0
 aiohttp[speedups]~=3.6.3
 aiofiles~=0.6.0
 humanize~=3.2.0
@@ -9,6 +9,10 @@ discord.py~=1.6.0
 youtube-dl
 dblpy
 lottie[GIF]~=0.6.7
-numpy~=1.20.2
+numpy~=1.21.0
 python-magic~=0.4.13
-pronouncing
+pronouncing~=0.2.0
+aiosqlite~=0.17.0
+emoji~=1.2.0
+regex~=2021.4.4
+urllib3~=1.26.6
