--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ selenium = "~=3.141.0"
 Pillow = "~=8.2.0"
 youtube-dl = "*"
 dblpy = "*"
-lottie = {extras = ["gif"], version = "*"}
+lottie = "*"
 numpy = "*"
 emoji = "*"
 regex = "*"
@@ -23,6 +23,7 @@ pronouncing = "*"
 "discordlists.py" = "*"
 aiosqlite = "*"
 asyncpg = "*"
+glaxnimate = "*"
 
 [dev-packages]
 
