segfault code that probably works :)

--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ aiosqlite = "*"
 asyncpg = "*"
 setuptools = "*"
 pyautotune = { git = "https://github.com/ederwander/PyAutoTune.git" }
+psutil = "*"
 
 [dev-packages]
 
