--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aiohttp = {extras = ["speedups"], version = "~=3.6.3"}
+nextcord = "*"
+aiohttp = { extras = ["speedups"], version = "~=3.6.3" }
 aiofiles = "~=0.6.0"
 humanize = "~=3.2.0"
 coloredlogs = "~=15.0"
 python-magic-win64 = "~=0.4.13"
 selenium = "~=3.141.0"
-"discord.py" = { git = "https://github.com/Rapptz/discord.py.git" }
 Pillow = "~=8.2.0"
 youtube-dl = "*"
 dblpy = "*"
@@ -26,6 +26,7 @@ setuptools = "*"
 pyautotune = { git = "https://github.com/ederwander/PyAutoTune.git" }
 psutil = "*"
 aubio = "*"
+
 
 [dev-packages]
 
