--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ humanize = "~=3.2.0"
 coloredlogs = "~=15.0"
 python-magic-win64 = "~=0.4.13"
 selenium = "~=3.141.0"
-Pillow = "~=8.2.0"
+Pillow = "*"
 numpy = "*"
 emoji = "*"
 regex = "*"
@@ -28,7 +28,7 @@ brotli = "*"
 cchardet = "*"
 orjson = "*"
 apng = "*"
-"discordlists.py" = { git = "https://github.com/HexCodeFFF/discordlists.py" }
+"discordlists.py" = { git = "https://github.com/HexCodeFFF/discordlists.py.git" }
 docstring-parser = "*"
 pipenv = "*"
 yt-dlp = "*"
