--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ authors = ["reticivis"]
 license = "GPL-3.0"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-nextcord = { git = "https://github.com/nextcord/nextcord.git", allow-prereleases = true, extras = ["speed"] }
-"discordlists.py" = { git = "https://github.com/HexCodeFFF/discordlists.py.git" }
+python = "^3.10"
+"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", allow-prereleases = true, extras = ["speed"] }
+"discordlists.py" = { git = "https://github.com/HexCodeFFF/dpy2-discordlists.py.git" }
 aiofiles = "^0.8.0"
 humanize = "^3.13.1"
 coloredlogs = "^15.0.1"
@@ -28,8 +28,6 @@ emojis = "^0.6.0"
 python-magic = { version = "^0.4.13", markers = "sys_platform != 'win32'" }
 python-magic-win64 = { version = "^0.4.13", markers = "sys_platform == 'win32'" }
 requests = "^2.27.1"
-
-pyttsx3 = "^2.90"
 # comtypes on pypi is fucked on 3.8+
 comtypes = { git = "https://github.com/enthought/comtypes.git" }
 
