--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,28 +10,28 @@ python = "^3.8"
 nextcord = { git = "https://github.com/nextcord/nextcord.git", allow-prereleases = true, extras = ["speed"] }
 "discordlists.py" = { git = "https://github.com/HexCodeFFF/discordlists.py.git" }
 aiofiles = "^0.8.0"
-humanize = "^3.13.1"
+humanize = "^4.2.3"
 coloredlogs = "^15.0.1"
-selenium = "^4.1.0"
+selenium = "^4.3.0"
 Pillow = "^9.0.0"
-numpy = "^1.22.1"
+numpy = "*"
 pyautotune = { git = "https://github.com/HexCodeFFF/PyAutoTune.git" }
-regex = "^2022.1.18"
+regex = "^2022.6.2"
 pronouncing = "^0.2.0"
 aiosqlite = "^0.17.0"
-psutil = "^5.9.0"
+psutil = "^5.9.1"
 aubio = "^0.4.9"
 apng = "^0.3.4"
-docstring-parser = "^0.13"
-yt-dlp = "^2022.1.21"
+docstring-parser = "^0.14.1"
+yt-dlp = "^2022.6.29"
 emojis = "^0.6.0"
 python-magic = { version = "^0.4.13", markers = "sys_platform != 'win32'" }
 python-magic-win64 = { version = "^0.4.13", markers = "sys_platform == 'win32'" }
-requests = "^2.27.1"
+requests = "^2.28.1"
 
 pyttsx3 = "^2.90"
 # comtypes on pypi is fucked on 3.8+
-comtypes = { git = "https://github.com/enthought/comtypes.git" }
+
 
 [tool.poetry.dev-dependencies]
 #aiohttp = { version = "^3.8.1", extras = ["speedups"] }
