--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-nextcord = { git = "https://github.com/nextcord/nextcord.git", allow-prereleases = true, extras = ["speed"] }
+#nextcord = { git = "https://github.com/nextcord/nextcord.git", allow-prereleases = true, extras = ["speed"] }
 "discordlists.py" = { git = "https://github.com/HexCodeFFF/discordlists.py.git" }
 aiofiles = "^0.8.0"
 humanize = "^4.2.3"
@@ -31,6 +31,7 @@ requests = "^2.28.1"
 
 pyttsx3 = "^2.90"
 # comtypes on pypi is fucked on 3.8+
+nextcord = { version = "^2.0.0", extras = ["speed"] }
 
 
 [tool.poetry.dev-dependencies]
