--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ python-magic-win64 = { version = "^0.4.13", markers = "sys_platform == 'win32'" 
 requests = "^2.28.1"
 "discordlists.py" = "^1.1.1"
 pyvips = "^2.2.1"
+tblib = "^1.7.0"
 
 
 [build-system]
