--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "2.0.0"
 description = "A Discord bot for editing and creating videos, images, GIFs, and more!"
 authors = ["reticivis"]
 license = "GPL-3.0"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
